[package]
name = "RustWare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
   "Win32_System_WindowsProgramming",
   "Win32_System_Diagnostics_Debug",
   "Win32_Storage_FileSystem",

]
[dependencies]
ggez = "0.9.0-rc0"
oorandom = "11.1.3"
getrandom = { version = "0.2", features = ["js"] }
libaes = "0.6.2"
rand = "0.8.4"
